--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 }
 .satauri{
     text-align: center;
-    font-size: 50px;
+    font-size: 70px;
     font-weight: 400;
     margin-bottom: 5vh;
 }
@@ -26,7 +26,7 @@ body{
     flex-wrap: wrap;
 }
 .barati{
-    width: 45%;
+    width: 35%;
     margin-right: 5%;
     min-width: 500px;
     height: 300px;
@@ -36,8 +36,33 @@ body{
     padding: 20px;
     background-image: url(img/download.jfif);
     background-size: cover;
+    overflow: hidden;
 }
 
-.barati::{
+.barati::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:#000;
+    opacity: 0.2;
 
+}
+
+.logo{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: block;
+    margin: 5px auto;
+    background:#000;
+
+
+}
+
+.input{
+    position: relative;
 }
