--- a/css/nav.css
+++ b/css/nav.css
@@ -35,7 +35,7 @@
   .nav-wrapper {
     margin: auto;
     text-align: center;
-    width: 70%;
+    width: 80%;
   } @media(max-width: 768px) {
       .nav-wrapper {
         width: 90%;
@@ -55,10 +55,10 @@
     letter-spacing: 1px;
     text-transform: uppercase;
   } @media(max-width: 768px) {
-      .logoBro {
+      /* .logoBro {
   /*       margin-left: 5px; */
       }
-    }
+     *
   
   #navbar ul {
     display: inline-block;
