branch tree modified

--- a/css/nav.css
+++ b/css/nav.css
@@ -64,7 +64,7 @@
     display: inline-block;
     float: right;
     list-style: none;
-    /* margin-right: 14px; */
+    margin-right: 14px; 
     margin-top: -2px;
     text-align: right;
     transition: transform 0.5s ease-out;
