--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
     position: relative;
     border-radius: 5px;
     padding: 20px;
-    background-image: url(img/download.jfif);
+    background-image: url(img/1.jpeg);
     background-size: cover;
     overflow: hidden;
 }
